--- a/index.html
+++ b/index.html
@@ -389,8 +389,8 @@ button, a, [role="button"] {
 <body>
   <div class="container">
     <header style="margin-bottom:16px">
-      <h1>四遊楽ガチャツール <span class="tag">黒×赤</span> <span class="tag">v21.3.4</span></h1>
-      <div class="muted">開始ボタン → <b>リアルタイム</b> / <b>最終結果貼付</b> / <b>JSON読込</b> を選択。解析後は従来UIにマッピングされます。</div>
+      <h1>四遊楽ガチャツール  <span class="tag">v21.3.4</span></h1>
+      <div class="muted">ガチャ・景品まとめ・アップロードまで出来るガチャツールです</div>
     </header>
 
     <!-- Splash -->
